align fix

--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -18,7 +18,7 @@ article {
 
 aside {
     background-color: rgb(0, 0, 0);
-    text-align: left;
+    text-align: center;
     font-size: 50px;
     font-family: sans-serif;
     color: white;
@@ -52,6 +52,7 @@ hr {
 }
 
 li {
+    text-align: left;
     margin: 5px 3em;
     padding: 0px;
 }
